--- a/Changes
+++ b/Changes
@@ -1,6 +1,15 @@
 Revision history for Perl extension Module::Build.
 
-0.26 (pending, still in beta)
+0.2601 (Bug fix for 0.26)   Wed Nov  3 20:09:27 CST 2004
+
+ - Fixed some backslash problems with split_like_shell() on
+   Win32. [Steve Hay]
+
+ - Fixed a bug in split_like_shell() in which leading whitespace was
+   creating an empty word, manifesting as something like "gcc - no
+   such file or directory" during tests. [Spotted by Warren L. Dodge]
+
+0.26 Sat Oct  9 17:51:01 CDT 2004
 
  - Removed some language from the Module::Build::Compat documentation
    that encouraged people to include a Build.PL without a Makefile.PL.
