--- a/Changes
+++ b/Changes
@@ -1,5 +1,19 @@
 Revision history for Perl extension Module::Build.
 
+0.2604  Wed Nov 17 14:32:42 CST 2004
+
+ - Fixed a split_like_shell() bug introduced in 0.2603 for Windows, in
+   which an array reference passed as an argument was returned as an
+   array reference, rather than as a list. [Spotted by Steve Hay]
+
+ - module_name() will now return '' instead of undef when module_name
+   is not set.  This eliminates a couple uninitialized-value
+   warnings. [Suggested by Michael Schwern]
+
+ - The expand_test_dir() method will now skip dotfiles (like ._foo.t,
+   which sometimes gets automatically created on Mac systems) when
+   'recursive_test_files' is in effect. [Tom Insam]
+
 0.2603 (Bug fix for 0.26)   Mon Nov 15 10:28:00 CST 2004
 
  - Added documentation for the new_from_context() method.
