--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perl extension Module::Build.
 
+0.2606 (Bug fix for 0.26)   Tue Dec  7 22:33:11 CST 2004
+
+ - Fixed a linking bug on Win32, in which compiled C code object files
+   never got linked in with the modules being built. [Dominic
+   Mitchell]
+
+ - Fixed a bug in the new_from_context() method in which any arguments
+   passed made us die. [Spotted by Jos Boumans]
+
 0.2605 (Bug fix for 0.26)   Tue Nov 30 07:16:13 CST 2004
 
  - Fixed a bug in which zero-length arguments for hash-valued
