Import of KWILLIAMS/Module-Build-0.27_03 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.27_03
gitpan-cpan-path:         KWILLIAMS/Module-Build-0.27_03.tar.gz
gitpan-cpan-author:       KWILLIAMS
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -184,11 +184,13 @@ ACTIONS
         in that directory.
 
     docs
-        This will generate documentation (ie: Unix man pages) for any binary
-        and library files under blib/ that contain POD. If there are no
-        `bindoc' or `libdoc' installation targets defined (as will be the
-        case on systems that don't support Unix manpages) this action does
-        nothing.
+        This will generate documentation (ie: Unix man pages and html
+        documents) for any binary and library files under blib/ that contain
+        POD. If there are no `bindoc' or `libdoc' installation targets
+        defined (as will be the case on systems that don't support Unix
+        manpages) no action is taken for manpages. If there are no `binhtml'
+        or `libhtml' installation targets defined no action is taken for
+        html documents.
 
     fakeinstall
         This is just like the `install' action, but it won't actually do
@@ -417,15 +419,21 @@ ACTIONS
         or something. Pretty rare to see this in a perl distribution, but it
         happens.
 
+    bindoc
+        Documentation for the stuff in `script' and `bin'. Usually generated
+        from the POD in those files. Under Unix, these are manual pages
+        belonging to the 'man1' category.
+
     libdoc
         Documentation for the stuff in `lib' and `arch'. This is usually
         generated from the POD in .pm files. Under Unix, these are manual
         pages belonging to the 'man3' category.
 
-    bindoc
-        Documentation for the stuff in `script' and `bin'. Usually generated
-        from the POD in those files. Under Unix, these are manual pages
-        belonging to the 'man1' category.
+    binhtml
+        This is the same as `bindoc' above, but applies to html documents.
+
+    libhtml
+        This is the same as `bindoc' above, but applies to html documents.
 
     Four other parameters let you control various aspects of how
     installation paths are determined:
@@ -445,8 +453,13 @@ ACTIONS
          arch    => installarchlib  installsitearch     installvendorarch
          script  => installscript   installsitebin      installvendorbin
          bin     => installbin      installsitebin      installvendorbin
-         libdoc  => installman3dir  installsiteman3dir  installvendorman3dir
          bindoc  => installman1dir  installsiteman1dir  installvendorman1dir
+         libdoc  => installman3dir  installsiteman3dir  installvendorman3dir
+         binhtml => installhtml1dir installsitehtml1dir installvendorhtml1dir [*]
+         libhtml => installhtml3dir installsitehtml3dir installvendorhtml3dir [*]
+
+         * Under some OS (eg. MSWin32) the destination for html documents is
+           determined by the C<Config.pm> entry C<installhtmldir>.
 
         The default value of `installdirs' is "site". If you're creating
         vendor distributions of module packages, you may want to do
@@ -493,12 +506,14 @@ ACTIONS
         For instance, if you set `install_base' to "/home/ken" on a Linux
         system, you'll install as follows:
 
-         lib     => /home/ken/lib
-         arch    => /home/ken/lib/i386-linux
-         script  => /home/ken/scripts
+         lib     => /home/ken/lib/perl5
+         arch    => /home/ken/lib/perl5/i386-linux
+         script  => /home/ken/bin
          bin     => /home/ken/bin
          bindoc  => /home/ken/man/man1
          libdoc  => /home/ken/man/man3
+         binhtml => /home/ken/html
+         libhtml => /home/ken/html
 
         Note that this is *different* from how MakeMaker's `PREFIX'
         parameter works. Module::Build doesn't support MakeMaker's `PREFIX'
