--- a/Changes
+++ b/Changes
@@ -1,5 +1,73 @@
 Revision history for Perl extension Module::Build.
 
+0.27_04  Fri Dec 23 10:43:34 CST 2005
+
+ - Removed experimental feature that extended the prerequisite system
+   to apply ('requires', 'recommends', and 'conflicts') prereqs to all
+   actions. Most of the internal extensiblity has been retained so
+   that prereq types can easily be added, more selectively.
+
+ - Added a 'prereq_report' action that shows the user a well-formatted
+   list of all prerequisites, the versions required, and the versions
+   actually installed. [David Wheeler]
+
+ - Clarified the directory name that's created during the 'distdir'
+   action. [Suggested by Typler MacDonald]
+
+ - Fixed a bug when creating the META.yml file without the help of
+   YAML.pm - some common strings weren't quoted & escaped properly.
+   Now only some uncommon ones are. [Spotted by Joshua ben Jore]
+
+ - Fixed a bug in which an "UNINST=1" argument specified to a
+   passthrough Makefile's "make install" wasn't actually seen by
+   Module::Build.
+
+ - Rather than dying when the Build script is run from the wrong
+   directory, it now simply chdir()s into the right directory and
+   keeps going. [Suggested by Dominique Quatravaux]
+
+ - Added an "Examples on CPAN" section to the cookbook, with an
+   initial entry pointing to John Peacock's SVN-Notify-Mirror
+   distribution.
+
+ - Add an invoked_action() method to return the name of the original
+   action invoked by the user.
+
+ - Add 'meta-spec' field to the generated META.yml file, including the
+   version of the specification followed by the current Module::Build
+   and the url where the specification can be found.
+
+ - Introduced two actions, 'html' & 'manpages', that generate
+   documentation for POD when the respective feature is enabled.  The
+   actions will generate the documents even if there is no set place
+   to install to.  However, if the actions are invoked as a dependency
+   of another action (e.g. build), the documentation will only be
+   built when there is a default or user-specified place to install to.
+
+ - Added support for environment variable, 'MODULEBUILDRC', which can
+   be used to specify the full path to an option file to use instead
+   of the default location of ~/.modulebuildrc. A special undocumented
+   setting of 'NONE' tells Module::Build not to load any user settings,
+   so tests can be run without tainting from user options.
+
+ - Documented and improved preliminary support for more Getopt::Long
+   style options are supported, including boolean options (--verbose,
+   --no-verbose), and use of hyphens in option names in addition to
+   underscores.
+
+ - The option to disable/enable reading of the ~/.modulebuildrc file
+   is changed from 'skip_rcfile' to 'use_rcfile'
+
+ - Allow the 'distmeta' action to continue when 'MANIFEST' is missing,
+   omitting the generation of the 'provieds' field. [Steven Schubiger]
+
+ - Fixed some failing regex from generated MANIFEST.SKIP file.
+
+ - Fixed an edge case in $VERSION parsing where we thought a package()
+   declaration was happening but it wasn't. [David Golden]
+
+ - Added docs for the install_destination() and install_types() methods.
+
 0.27_03 (Beta for 0.28)  Mon Oct 10 11:19:23 EDT 2005
 
  - We now use ExtUtils::CBuilder to do all compiling of C code (for
@@ -195,13 +263,6 @@ Revision history for Perl extension Module::Build.
 
  - We now use ExtUtils::CBuilder to do all compiling of C code (for
    example, when compiling XS modules).
-
- - Extend prerequisite specifications to apply to all actions. It is
-   now a fatal error if 'requires' or 'conflicts' for a given action
-   are not satisfied, except where necessary for backwards compatability.
-   Also, added '--force' options to ignore the fatal errors. (NOTE:
-   this is a somewhat experimental feature, we may morph this around a
-   bit before final release!)
 
  - The creation of Unix man pages is no longer a strict necessity - it
    has now been turned into an 'auto-feature' contingent on the
