--- a/README
+++ b/README
@@ -4,18 +4,18 @@ NAME
 SYNOPSIS
     Standard process for building & installing modules:
 
-       perl Build.PL
-       ./Build
-       ./Build test
-       ./Build install
+      perl Build.PL
+      ./Build
+      ./Build test
+      ./Build install
 
     Or, if you're on a platform (like DOS or Windows) that doesn't like the
     "./" notation, you can do this:
 
-       perl Build.PL
-       perl Build
-       perl Build test
-       perl Build install
+      perl Build.PL
+      perl Build
+      perl Build test
+      perl Build install
 
 DESCRIPTION
     `Module::Build' is a system for building, testing, and installing Perl
@@ -48,10 +48,34 @@ DESCRIPTION
 
     You can run the 'help' action for a complete list of actions.
 
+GUIDE TO DOCUMENTATION
+    The documentation for `Module::Build' is broken up into three sections:
+
+    General Usage (Module::Build)
+        This is the document you are currently reading. It describes basic
+        usage and background information. Its main purpose is to assist the
+        user who wants to learn how to invoke and control `Module::Build'
+        scripts at the command line.
+
+    Authoring Reference (Module::Build::Authoring)
+        This document describes the `Module::Build' API for authors who are
+        writing Build.PL scripts for a distribution or controlling
+        `Module::Build' processes programmatically. It describes the methods
+        available as well as providing general information on subclassing
+        `Module::Build' to alter and extend its behavior. Also, there is a
+        section on controlling the Build process from other scripts,
+        including how to construct an object and how to invoke actions
+        through it from an external script.
+
+    Cookbook (Module::Build::Cookbook)
+        This document demonstrates how to accomplish many common tasks. It
+        covers general command line usage and authoring of Build.PL scripts.
+        Includes working examples.
+
 ACTIONS
     There are some general principles at work here. First, each task when
     building a module is called an "action". These actions are listed above;
-    they correspond to the building, testing, installing, packaging, etc.
+    they correspond to the building, testing, installing, packaging, etc.,
     tasks.
 
     Second, arguments are processed in a very systematic way. Arguments are
@@ -60,7 +84,7 @@ ACTIONS
     values last for the lifetime of the `Build' script. They may also be
     specified when executing a particular action (i.e. `Build test
     verbose=1'), in which case their values last only for the lifetime of
-    that command. Per-action command-line parameters take precedence over
+    that command. Per-action command line parameters take precedence over
     parameters specified at `perl Build.PL' time.
 
     The build process also relies heavily on the `Config.pm' module, and all
@@ -94,30 +118,12 @@ ACTIONS
         the same one that built perl itself) for the compilation to work
         properly.
 
-        The `build' action also runs any `.PL' files in your lib/ directory.
+        The `code' action also runs any `.PL' files in your lib/ directory.
         Typically these create other files, named the same but without the
         `.PL' ending. For example, a file lib/Foo/Bar.pm.PL could create the
         file lib/Foo/Bar.pm. The `.PL' files are processed first, so any
         `.pm' files (or other kinds that we deal with) will get copied
         correctly.
-
-        If your `.PL' scripts don't create any files, or if they create
-        files with unexpected names, or even if they create multiple files,
-        you should tell us that so that we can clean up properly after these
-        created files. Use the `PL_files' parameter to `new()':
-
-         PL_files => { 'lib/Foo/Bar_pm.PL' => 'lib/Foo/Bar.pm',
-                       'lib/something.PL'  => ['/lib/something', '/lib/else'],
-                       'lib/funny.PL'      => [] }
-
-        Note that in contrast to MakeMaker, the `build' action only
-        (currently) handles `.pm', `.pod', `.PL', and `.xs' files. They must
-        all be in the `lib/' directory, in the directory structure that they
-        should have when installed. We also handle `.c' files that can be in
-        the place of your choosing - see the `c_source' argument to `new()'.
-
-        The `.xs' support is currently in alpha. Please let me know whether
-        it works for you.
 
     config_data
         ...
@@ -133,7 +139,7 @@ ACTIONS
         passed to the 'diff' program. Consult your 'diff' documentation for
         the parameters it will accept - a good one is `-u':
 
-         ./Build diff flags=-u
+          ./Build diff flags=-u
 
     dist
         This action is helpful for module authors who want to package up
@@ -146,32 +152,34 @@ ACTIONS
         elsewhere. However, you can force it to use whatever executable you
         want by supplying an explicit `tar' (and optional `gzip') parameter:
 
-         perl Build dist --tar C:\path\to\tar.exe --gzip C:\path\to\zip.exe
+          ./Build dist --tar C:\path\to\tar.exe --gzip C:\path\to\zip.exe
 
     distcheck
         Reports which files are in the build directory but not in the
-        MANIFEST file, and vice versa. (See manifest for details)
+        MANIFEST file, and vice versa. (See manifest for details.)
 
     distclean
         Performs the 'realclean' action and then the 'distcheck' action.
 
     distdir
-        Creates a directory called `$(DISTNAME)-$(VERSION)' (if that
-        directory already exists, it will be removed first). Then copies all
-        the files listed in the MANIFEST file to that directory. This
-        directory is what people will see when they download your
-        distribution and unpack it.
-
-        While performing the 'distdir' action, a file containing various
-        bits of "metadata" will be created. The metadata includes the
-        module's name, version, dependencies, license, and the
-        `dynamic_config' flag. This file is created as META.yml in YAML
-        format, so you must have the `YAML' module installed in order to
-        create it. You should also ensure that the META.yml file is listed
-        in your MANIFEST - if it's not, a warning will be issued.
+        Creates a "distribution directory" named `$dist_name-$dist_version'
+        (if that directory already exists, it will be removed first), then
+        copies all the files listed in the MANIFEST file to that directory.
+        This directory is what the distribution tarball is created from.
 
     distmeta
-        Creates the META.yml file for your distribution.
+        Creates the META.yml file that describes the distribution.
+
+        META.yml is a file containing various bits of "metadata" about the
+        distribution. The metadata includes the distribution name, version,
+        abstract, prerequisites, license, and various other data about the
+        distribution. This file is created as META.yml in YAML format, so
+        the `YAML' module must be installed in order to create it. The
+        META.yml file must also be listed in MANIFEST - if it's not, a
+        warning will be issued.
+
+        The current version of the META.yml specification can be found at
+        http://module-build.sourceforge.net/META-spec-v1.2.html
 
     distsign
         Uses `Module::Signature' to create a SIGNATURE file for your
@@ -184,13 +192,12 @@ ACTIONS
         in that directory.
 
     docs
-        This will generate documentation (ie: Unix man pages and html
-        documents) for any binary and library files under blib/ that contain
-        POD. If there are no `bindoc' or `libdoc' installation targets
-        defined (as will be the case on systems that don't support Unix
-        manpages) no action is taken for manpages. If there are no `binhtml'
-        or `libhtml' installation targets defined no action is taken for
-        html documents.
+        This will generate documentation (e.g. Unix man pages and html
+        documents) for any installable items under blib/ that contain POD.
+        If there are no `bindoc' or `libdoc' installation targets defined
+        (as will be the case on systems that don't support Unix manpages) no
+        action is taken for manpages. If there are no `binhtml' or `libhtml'
+        installation targets defined no action is taken for html documents.
 
     fakeinstall
         This is just like the `install' action, but it won't actually do
@@ -206,18 +213,26 @@ ACTIONS
         help test'), the 'help' action will show you any POD documentation
         it can find for that action.
 
+    html
+        This will generate HTML documentation for any binary or library
+        files under blib/ that contain POD. The HTML documentation will only
+        be installed if the install paths can be determined from values in
+        `Config.pm'. You can also supply or override install paths on the
+        command line by specifying `install_path' values for the `binhtml'
+        and/or `libhtml' installation targets.
+
     install
         This action will use `ExtUtils::Install' to install the files from
-        `blib/' into the system. See How Installation Paths are Determined
-        for details about how Module::Build determines where to install
-        things, and how to influence this process.
+        `blib/' into the system. See INSTALL PATHS for details about how
+        Module::Build determines where to install things, and how to
+        influence this process.
 
         If you want the installation process to look around in `@INC' for
         other versions of the stuff you're installing and try to delete it,
         you can use the `uninst' parameter, which tells `ExtUtils::Install'
         to do so:
 
-         Build install uninst=1
+          ./Build install uninst=1
 
         This can be a good idea, as it helps prevent multiple versions of a
         module from being present on your system, which can be a confusing
@@ -236,16 +251,24 @@ ACTIONS
         The following is a reasonable MANIFEST.SKIP starting point, you can
         add your own stuff to it:
 
-           ^_build
-           ^Build$
-           ^blib
-           ~$
-           \.bak$
-           ^MANIFEST\.SKIP$
-           CVS
+          ^_build
+          ^Build$
+          ^blib
+          ~$
+          \.bak$
+          ^MANIFEST\.SKIP$
+          CVS
 
         See the distcheck and skipcheck actions if you want to find out what
         the `manifest' action would do, without actually doing anything.
+
+    manpages
+        This will generate man pages for any binary or library files under
+        blib/ that contain POD. The man pages will only be installed if the
+        install paths can be determined from values in `Config.pm'. You can
+        also supply or override install paths by specifying there values on
+        the command line with the `bindoc' and `libdoc' installation
+        targets.
 
     ppd Build a PPD file for your distribution.
 
@@ -256,7 +279,7 @@ ACTIONS
 
         Example:
 
-         perl Build ppd codebase="MSWin32-x86-multi-thread/Module-Build-0.21.tar.gz"
+          ./Build ppd --codebase "MSWin32-x86-multi-thread/Module-Build-0.21.tar.gz"
 
     ppmdist
         Generates a PPM binary distribution and a PPD description file. This
@@ -266,6 +289,12 @@ ACTIONS
         This uses the same mechanism as the `dist' action to tar & zip its
         output, so you can supply `tar' and/or `gzip' parameters to affect
         the result.
+
+    prereq_report
+        This action prints out a list of all prerequisites, the versions
+        required, and the versions actually installed. This can be useful
+        for reviewing the configuration of your system prior to a build, or
+        when compiling data to send for a bug report.
 
     pure_install
         This action is identical to the `install' action. In the future,
@@ -308,15 +337,15 @@ ACTIONS
         to run a single test to see whether you've squashed a certain bug
         yet:
 
-         ./Build test --test_files t/something_failing.t
+          ./Build test --test_files t/something_failing.t
 
         You may also pass several `test_files' arguments separately:
 
-         ./Build test --test_files t/one.t --test_files t/two.t
+          ./Build test --test_files t/one.t --test_files t/two.t
 
         or use a `glob()'-style pattern:
 
-         ./Build test --test_files 't/01-*.t'
+          ./Build test --test_files 't/01-*.t'
 
     testcover
         Runs the `test' action using `Devel::Cover', generating a
@@ -347,23 +376,47 @@ ACTIONS
         library trees. This means that you can have several versions of the
         same module installed and `use' a specific one like this:
 
-         use only MyModule => 0.55;
+          use only MyModule => 0.55;
 
         To override the default installation libraries in `only::config',
         specify the `versionlib' parameter when you run the `Build.PL'
         script:
 
-         perl Build.PL versionlib=/my/version/place/
+          perl Build.PL --versionlib /my/version/place/
 
         To override which version the module is installed as, specify the
         `versionlib' parameter when you run the `Build.PL' script:
 
-         perl Build.PL version=0.50
+          perl Build.PL --version 0.50
 
         See the `only.pm' documentation for more information on
         version-specific installs.
 
-  Default Commandline Options (.modulebuildrc)
+OPTIONS
+  Command Line Options
+
+    The following options can be used during any invocation of `Build.PL' or
+    the Build script, during any action. For information on other options
+    specific to an action, see the documentation for the respective action.
+
+    NOTE: There is some preliminary support for options to use the more
+    familiar long option style. Most options can be preceded with the `--'
+    long option prefix, and the underscores changed to dashes (e.g.
+    --use-rcfile). Additionally, the argument to boolean options is
+    optional, and boolean options can be negated by prefixing them with 'no'
+    or 'no-' (e.g. --noverbose or --no-verbose).
+
+    quiet
+        Suppress informative messages on output.
+
+    use_rcfile
+        Load the ~/.modulebuildrc option file. This option can be set to
+        false to prevent the custom resource file from being loaded.
+
+    verbose
+        Display extra information about the Build on output.
+
+  Default Options File (.modulebuildrc)
 
     When Module::Build starts up, it will look for a file,
     $ENV{HOME}/.modulebuildrc. If the file exists, the options specified
@@ -373,8 +426,8 @@ ACTIONS
 
     The action name must come at the beginning of the line, followed by any
     amount of whitespace and then the options. Options are given the same as
-    they would be on the commandline. They can be separated by any amount of
-    whitespace, including newlines, as long there is whitespace at the
+    they would be on the command line. They can be separated by any amount
+    of whitespace, including newlines, as long there is whitespace at the
     beginning of each continued line. Anything following a hash mark (`#')
     is considered a comment, and is stripped before parsing. If more than
     one line begins with the same action name, those lines are merged into
@@ -385,13 +438,16 @@ ACTIONS
     all actions, and the key 'Build_PL' specifies options to be applied when
     you invoke `perl Build.PL'.
 
-     *        verbose=1   # global options
-     diff     flags=-u
-     install  install_base=/home/ken
-              --install_path html=/home/ken/docs/html
+      *        verbose=1   # global options
+      diff     flags=-u
+      install  --install_base /home/ken
+               --install_path html=/home/ken/docs/html
 
-  How Installation Paths are Determined
+    If you wish to locate your resource file in a different location, you
+    can set the environment variable 'MODULEBUILDRC' to the complete
+    absolute path of the file containing your options.
 
+INSTALL PATHS
     When you invoke Module::Build's `build' action, it needs to figure out
     where to install things. The nutshell version of how this works is that
     default installation locations are determined from Config.pm, and they
@@ -446,30 +502,30 @@ ACTIONS
 
                                   'installdirs' set to:
                            core          site                vendor
- 
-                      uses the following defaults from Config.pm:
- 
-         lib     => installprivlib  installsitelib      installvendorlib
-         arch    => installarchlib  installsitearch     installvendorarch
-         script  => installscript   installsitebin      installvendorbin
-         bin     => installbin      installsitebin      installvendorbin
-         bindoc  => installman1dir  installsiteman1dir  installvendorman1dir
-         libdoc  => installman3dir  installsiteman3dir  installvendorman3dir
-         binhtml => installhtml1dir installsitehtml1dir installvendorhtml1dir [*]
-         libhtml => installhtml3dir installsitehtml3dir installvendorhtml3dir [*]
 
-         * Under some OS (eg. MSWin32) the destination for html documents is
-           determined by the C<Config.pm> entry C<installhtmldir>.
+                      uses the following defaults from Config.pm:
+
+          lib     => installprivlib  installsitelib      installvendorlib
+          arch    => installarchlib  installsitearch     installvendorarch
+          script  => installscript   installsitebin      installvendorbin
+          bin     => installbin      installsitebin      installvendorbin
+          bindoc  => installman1dir  installsiteman1dir  installvendorman1dir
+          libdoc  => installman3dir  installsiteman3dir  installvendorman3dir
+          binhtml => installhtml1dir installsitehtml1dir installvendorhtml1dir [*]
+          libhtml => installhtml3dir installsitehtml3dir installvendorhtml3dir [*]
+
+          * Under some OS (eg. MSWin32) the destination for html documents is
+            determined by the C<Config.pm> entry C<installhtmldir>.
 
         The default value of `installdirs' is "site". If you're creating
         vendor distributions of module packages, you may want to do
         something like this:
 
-         perl Build.PL installdirs=vendor
+          perl Build.PL --installdirs vendor
 
         or
 
-         Build install installdirs=vendor
+          ./Build install --installdirs vendor
 
         If you're installing an updated version of a module that was
         included with perl itself (i.e. a "core module"), then you may set
@@ -484,21 +540,15 @@ ACTIONS
         appropriate entries, we'll start using those.)
 
     install_path
-        Once the defaults have been set, you can override them. You can set
-        individual entries by using the `install_path' parameter:
-
-         my $m = Module::Build->new
-          (...other options...,
-           install_path => {lib  => '/foo/lib',
-                            arch => '/foo/lib/arch'});
+        Once the defaults have been set, you can override them.
 
         On the command line, that would look like this:
 
-         perl Build.PL --install_path lib=/foo/lib --install_path arch=/foo/lib/arch
+          perl Build.PL --install_path lib=/foo/lib --install_path arch=/foo/lib/arch
 
         or this:
 
-         Build install --install_path lib=/foo/lib --install_path arch=/foo/lib/arch
+          ./Build install --install_path lib=/foo/lib --install_path arch=/foo/lib/arch
 
     install_base
         You can also set the whole bunch of installation paths by supplying
@@ -506,21 +556,20 @@ ACTIONS
         For instance, if you set `install_base' to "/home/ken" on a Linux
         system, you'll install as follows:
 
-         lib     => /home/ken/lib/perl5
-         arch    => /home/ken/lib/perl5/i386-linux
-         script  => /home/ken/bin
-         bin     => /home/ken/bin
-         bindoc  => /home/ken/man/man1
-         libdoc  => /home/ken/man/man3
-         binhtml => /home/ken/html
-         libhtml => /home/ken/html
+          lib     => /home/ken/lib/perl5
+          arch    => /home/ken/lib/perl5/i386-linux
+          script  => /home/ken/bin
+          bin     => /home/ken/bin
+          bindoc  => /home/ken/man/man1
+          libdoc  => /home/ken/man/man3
+          binhtml => /home/ken/html
+          libhtml => /home/ken/html
 
         Note that this is *different* from how MakeMaker's `PREFIX'
-        parameter works. Module::Build doesn't support MakeMaker's `PREFIX'
-        option. See "Why PREFIX is not supported" for more details.
-        `install_base' just gives you a default layout under the directory
-        you specify, which may have little to do with the `installdirs=site'
-        layout.
+        parameter works. See "Why PREFIX is not recommended" for more
+        details. `install_base' just gives you a default layout under the
+        directory you specify, which may have little to do with the
+        `installdirs=site' layout.
 
         The exact layout under the directory you specify may vary by system
         - we try to do the "sensible" thing on each platform.
@@ -531,52 +580,18 @@ ACTIONS
         manager like `rpm' or `dpkg' could create a package from), you can
         use the `destdir' parameter:
 
-         perl Build.PL destdir=/tmp/foo
+          perl Build.PL --destdir /tmp/foo
 
         or
 
-         Build install destdir=/tmp/foo
+          ./Build install --destdir /tmp/foo
 
         This will effectively install to "/tmp/foo/$sitelib",
         "/tmp/foo/$sitearch", and the like, except that it will use
         `File::Spec' to make the pathnames work correctly on whatever
         platform you're installing on.
 
-Alternatives to PREFIX
-    Module::Build offers install_base as a simple, predictable, and
-    user-configurable alternative to ExtUtils::MakeMaker's `PREFIX'. What's
-    more, MakeMaker will soon accept `INSTALL_BASE' -- we strongly urge you
-    to make the switch.
-
-    Here's a quick comparison of the two when installing modules to your
-    home directory on a unix box:
-
-    MakeMaker [*]:
-
-      % perl Makefile.PL PREFIX=/home/spurkis
-      PERL5LIB=/home/spurkis/lib/perl5/5.8.5:/home/spurkis/lib/perl5/site_perl/5.8.5
-      PATH=/home/spurkis/bin
-      MANPATH=/home/spurkis/man
-
-    Module::Build:
-
-      % perl Build.PL install_base=/home/spurkis
-      PERL5LIB=/home/spurkis/lib/perl5
-      PATH=/home/spurkis/bin
-      MANPATH=/home/spurkis/man
-
-    [*] Note that MakeMaker's behaviour cannot be guaranteed in even this
-    common scenario, and differs among different versions of MakeMaker.
-
-    In short, using `install_base' is similar to the following MakeMaker
-    usage:
-
-      perl Makefile.PL PREFIX=/home/spurkis LIB=/home/spurkis/lib/perl5
-
-    See How Installation Paths are Determined for details on other
-    installation options available and how to configure them.
-
-  Why PREFIX is not supported
+  About PREFIX Support
 
     First, it is necessary to understand the original idea behind `PREFIX'.
     If, for example, the default installation locations for your machine are
@@ -589,47 +604,77 @@ Alternatives to PREFIX
 
     However, the real world is more complicated than that. The `PREFIX' idea
     is fundamentally broken when your machine doesn't jibe with `PREFIX''s
-    worldview. A design decision was made not to support it in
-    Module::Build, here's a summary of the reasons why:
+    worldview.
 
-    *   Many systems have Perl configs that make little sense with PREFIX.
-        For example, OS X, where core modules go in
-        /System/Library/Perl/..., user-installed modules go in
-        /Library/Perl/..., and man pages go in /usr/share/man/.... The
-        PREFIX is thus set to /. Install Foo::Bar on OS X with
-        `PREFIX=/home/spurkis' and you get things like
-        /home/spurkis/Library/Perl/5.8.1/Foo/Bar.pm and
-        /home/spurkis/usr/share/man/man3/Foo::Bar.3pm. Not too pretty.
+    Why PREFIX is not recommended
+        *   Many systems have Perl configs that make little sense with
+            PREFIX. For example, OS X, where core modules go in
+            /System/Library/Perl/..., user-installed modules go in
+            /Library/Perl/..., and man pages go in /usr/share/man/.... The
+            PREFIX is thus set to /. Install Foo::Bar on OS X with
+            `PREFIX=/home/spurkis' and you get things like
+            /home/spurkis/Library/Perl/5.8.1/Foo/Bar.pm and
+            /home/spurkis/usr/share/man/man3/Foo::Bar.3pm. Not too pretty.
 
-        The problem is not limited to Unix-like platforms, either - on
-        Windows builds (e.g. ActiveState perl 5.8.0), we have user-installed
-        modules going in C:\Perl\site\lib, user-installed executables going
-        in C:\Perl\bin, and PREFIX=C:\Perl\site. The prefix just doesn't
-        apply neatly to the executables.
+            The problem is not limited to Unix-like platforms, either - on
+            Windows builds (e.g. ActiveState perl 5.8.0), we have
+            user-installed modules going in C:\Perl\site\lib, user-installed
+            executables going in C:\Perl\bin, and PREFIX=C:\Perl\site. The
+            prefix just doesn't apply neatly to the executables.
 
-    *   The PREFIX logic is too complicated and hard to predict for the
-        user. It's hard to document what exactly is going to happen. You
-        can't give a user simple instructions like "run perl Makefile.PL
-        PREFIX=~ and then set PERL5LIB=~/lib/perl5".
+        *   The PREFIX logic is too complicated and hard to predict for the
+            user. It's hard to document what exactly is going to happen. You
+            can't give a user simple instructions like "run perl Makefile.PL
+            PREFIX=~ and then set PERL5LIB=~/lib/perl5".
 
-    *   The results from PREFIX will change if your configuration of Perl
-        changes (for example, if you upgrade Perl). This means your modules
-        will end up in different places.
+        *   The results from PREFIX will change if your configuration of
+            Perl changes (for example, if you upgrade Perl). This means your
+            modules will end up in different places.
 
-    *   The results from PREFIX can change with different releases of
-        MakeMaker. The logic of PREFIX is subtle and it has been altered in
-        the past (mostly to limit damage in the many "edge cases" when its
-        behavior was undesirable).
+        *   The results from PREFIX can change with different releases of
+            MakeMaker. The logic of PREFIX is subtle and it has been altered
+            in the past (mostly to limit damage in the many "edge cases"
+            when its behavior was undesirable).
 
-    *   PREFIX imposes decisions made by the person who configured Perl onto
-        the person installing a module. The person who configured Perl could
-        have been you or it could have been some guy at Redhat.
+        *   PREFIX imposes decisions made by the person who configured Perl
+            onto the person installing a module. The person who configured
+            Perl could have been you or it could have been some guy at
+            Redhat.
 
-  PREFIX will be supported
+    Alternatives to PREFIX
+        Module::Build offers install_base as a simple, predictable, and
+        user-configurable alternative to ExtUtils::MakeMaker's `PREFIX'.
+        What's more, MakeMaker will soon accept `INSTALL_BASE' -- we
+        strongly urge you to make the switch.
 
-    The current maintainer of MakeMaker has offered to implement `PREFIX'
-    pass-through support in Module::Build for backwards compatability only.
-    You are still strongly recommended to use `install_base'.
+        Here's a quick comparison of the two when installing modules to your
+        home directory on a unix box:
+
+        MakeMaker [*]:
+
+          % perl Makefile.PL PREFIX=/home/spurkis
+          PERL5LIB=/home/spurkis/lib/perl5/5.8.5:/home/spurkis/lib/perl5/site_perl/5.8.5
+          PATH=/home/spurkis/bin
+          MANPATH=/home/spurkis/man
+
+        Module::Build:
+
+          % perl Build.PL install_base=/home/spurkis
+          PERL5LIB=/home/spurkis/lib/perl5
+          PATH=/home/spurkis/bin
+          MANPATH=/home/spurkis/man
+
+        [*] Note that MakeMaker's behaviour cannot be guaranteed in even
+        this common scenario, and differs among different versions of
+        MakeMaker.
+
+        In short, using `install_base' is similar to the following MakeMaker
+        usage:
+
+          perl Makefile.PL PREFIX=/home/spurkis LIB=/home/spurkis/lib/perl5
+
+        See INSTALL PATHS for details on other installation options
+        available and how to configure them.
 
 MOTIVATIONS
     There are several reasons I wanted to start over, and not just fix what
@@ -686,21 +731,21 @@ TO DO
     NFS, and it's just generally flimsy. It would be better to use an MD5
     signature or the like, if available. See `cons' for an example.
 
-    - append to perllocal.pod - write .packlist in appropriate location
-    (needed for un-install) - add a 'plugin' functionality
+     - append to perllocal.pod
+     - add a 'plugin' functionality
 
 AUTHOR
-    Ken Williams, kwilliams@cpan.org
+    Ken Williams <kwilliams@cpan.org>
 
     Development questions, bug reports, and patches should be sent to the
-    Module-Build mailing list at module-build-general@lists.sourceforge.net
-    .
+    Module-Build mailing list at
+    <module-build-general@lists.sourceforge.net>.
 
     Bug reports are also welcome at
-    http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build .
+    <http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Build>.
 
     An anonymous CVS repository containing the latest development version is
-    available; see http://sourceforge.net/cvs/?group_id=45731 for the
+    available; see <http://sourceforge.net/cvs/?group_id=45731> for the
     details of how to access it.
 
 COPYRIGHT
@@ -712,6 +757,9 @@ COPYRIGHT
 SEE ALSO
     perl(1), Module::Build::Cookbook(3), Module::Build::Authoring(3),
     ExtUtils::MakeMaker(3), YAML(3)
+
+    META.yml Specification:
+    http://module-build.sourceforge.net/META-spec-v1.2.html
 
     http://www.dsmit.com/cons/
 
