--- a/Changes
+++ b/Changes
@@ -1,5 +1,25 @@
 Revision history for Perl extension Module::Build.
 
+0.27_06  Mon Jan 23 21:44:54 CST 2006
+
+ - Fixed an undefined-variable warning when building the META.yml file
+   and the author hasn't used the 'module_name' mechanism. [Chris Dolan]
+
+ - We should now work with recent (> 0.49) versions of YAML.pm when
+   creating the META.yml file. [Yitzchak Scott-Thoennes]
+
+ - The y_n() method now requires the default parameter, and the
+   prompt() and y_n() methods have been improved with respect to
+   how they behave/detect when there is no user to ask.  We're now
+   more consistent with MakeMaker, including respecting the
+   PERL_MM_USE_DEFAULT environment variable. [Tyler MacDonald and
+   Yitzchak Scott-Thoennes]
+
+ - When building a README file using Pod::Text, work around a bug in
+   Pod::Text 3.01, which expects Pod::Simple::parse_file to take input
+   and output filehandles when it actually only takes an input
+   filehandle. [Yitzchak Scott-Thoennes]
+
 0.27_05  Thu Jan 12 17:39:21 CST 2006
 
  - In t/common.pl, we were attempting to let the user's installed
