Import of KWILLIAMS/Module-Build-0.27_09 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.27_09
gitpan-cpan-path:         KWILLIAMS/Module-Build-0.27_09.tar.gz
gitpan-cpan-author:       KWILLIAMS
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -103,6 +103,11 @@ ACTIONS
 
         This is analogous to the MakeMaker 'make all' target.
 
+    testpodcoverage
+        This checks the pod coverage of the distribution and produces
+        `Test::Harness'-style output. If you are a module author, this is
+        useful to run before creating a new release.
+
     clean
         This action will clean up any files that the build process may have
         created, including the `blib/' directory (but not including the
